--- a/www/test_select.html
+++ b/www/test_select.html
@@ -31,7 +31,7 @@
         
         <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak hide"></ons-icon>
         {{ _test_select.question }}
-        <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak"></ons-icon>
+        <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak" ng-show="CONFIG.enable_speak === true"></ons-icon>
         
     </div>
 
