--- a/www/learn_flashcard_transition.html
+++ b/www/learn_flashcard_transition.html
@@ -30,14 +30,14 @@
 
         <!-- 英文的部分 -->
         <ons-row class="side q">
-            <ons-icon icon="ion-radio-waves" fixed-width="true" class="hide speak"></ons-icon>
+            <ons-icon icon="ion-radio-waves" fixed-width="true" class="hide speak" ng-show="CONFIG.enable_speak === true"></ons-icon>
             {{ ctl_learn_flashcard.var.learn_flashcard_transition.q}}
-            <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak"></ons-icon>
+            <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak" ng-show="CONFIG.enable_speak === true"></ons-icon>
         </ons-row>
         <ons-row class="side a bg-info">
-            <ons-icon icon="ion-radio-waves" fixed-width="true" class="hide speak"></ons-icon>
+            <ons-icon icon="ion-radio-waves" fixed-width="true" class="hide speak" ng-show="CONFIG.enable_speak === true"></ons-icon>
             {{ ctl_learn_flashcard.var.learn_flashcard_transition.a}}
-            <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak"></ons-icon>
+            <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak" ng-show="CONFIG.enable_speak === true"></ons-icon>
         </ons-row>
         
         <ons-row style="display: flex;" class="side dictionary">
