0315 修正cache.manifest的問題

--- a/www/index.html
+++ b/www/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- CSP support mode (required for Windows Universal apps): https://docs.angularjs.org/api/ng/directive/ngCsp -->
-<html lang="en" ng-csp manifest="cache.manifest" type="text/cache-manifest">
+<html lang="en" ng-csp>
 <!-- <html lang="en" ng-csp manifest="cache.manifest"> -->
     <head>
         <meta charset="utf-8" />
