--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- CSP support mode (required for Windows Universal apps): https://docs.angularjs.org/api/ng/directive/ngCsp -->
-<html lang="en" ng-csp manifest="cache.manifest" type="text/cache-manifest">
-<!-- <html lang="en" ng-csp manifest="cache.manifest"> -->
+<html lang="en" ng-csp>
+<!-- <html lang="en" ng-csp manifest="cache.manifest" type="text/cache-manifest"> -->
     <head>
         <meta charset="utf-8" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
