0315 iOS可以用，資料結構大改變

--- a/www/setting.html
+++ b/www/setting.html
@@ -22,7 +22,7 @@
     <ons-list modifier="inset" class="settings-list">
         <ons-list-item>
             <ons-row>
-                <ons-col>
+                <ons-col width="200px">
                     <ons-icon icon="ion-person" size="20px"></ons-icon>
                     您的名稱 <!-- @TODO 語系 -->
                 </ons-col>
