--- a/www/splash_screen.html
+++ b/www/splash_screen.html
@@ -1,7 +1,7 @@
-<div class="ons-loading-placeholder">
+<div class="ons-loading-placeholder" onclick="location.reload();">
     <img src="img/loading.svg" /> 
     <div class="message">
-        讀取中，請稍候
+        讀取中，請稍候 <!-- @TODO 語系 -->
     </div>
     
 </div>
