--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="mobile-web-app-capable" content="yes" />
+        <meta name="viewport" content="minimal-ui">
 
         <!-- ======================================== 
              Library
