--- a/www/learn_flashcard_transition.html
+++ b/www/learn_flashcard_transition.html
@@ -80,10 +80,10 @@
         <ons-icon icon="ion-edit" fixed-width="true" class="compose"></ons-icon>
 
         <span class="your-note pre" 
-              ng-show="(ctl_learn_flashcard.var.learn_flashcard_transition.note !== null)">{{ ctl_learn_flashcard.var.learn_flashcard_transition.note}}</span>
+              ng-show="(ctl_learn_flashcard.var.learn_flashcard_transition.note !== null && ctl_learn_flashcard.var.learn_flashcard.note !== undefined)">{{ ctl_learn_flashcard.var.learn_flashcard_transition.note}}</span>
 
         <span class="note-empty" 
-              ng-show="(ctl_learn_flashcard.var.learn_flashcard_transition.note === null)">
+              ng-show="(ctl_learn_flashcard.var.learn_flashcard_transition.note === null || ctl_learn_flashcard.var.learn_flashcard.note === undefined)">
             {{ 'LEARN_FLASHCARD_NOTE_EMPTY' | translate }}
         </span>
 
