0316 完整解決快取問題

--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -64,7 +64,7 @@
                 <ons-button>
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="synonym-dictionary" "></ons-icon>
                     <div>
-                        同義字字典 <!-- @TODO 語系 -->
+                        同義字典 <!-- @TODO 語系 -->
                     </div>
                 </ons-button>
             </ons-col>
