--- a/www/about.html
+++ b/www/about.html
@@ -1,4 +1,4 @@
-<ons-page id="about_html" ng-device-backbutton="app.menu.open()">
+<ons-page id="about_html" ng-device-backbutton="app.navi.popPage()">
 
 
     <ons-toolbar>
