--- a/www/setting.html
+++ b/www/setting.html
@@ -53,6 +53,11 @@
             {{ 'ABOUT' | translate}}
         </ons-list-item>
         
+        <ons-list-item modifier="chevron" ng-click="ctl_setting.open_log()" ng-show="CONFIG.enable_log">
+            <ons-icon icon="ion-pound" size="20px"></ons-icon>
+            偵錯記錄 <!-- @TODO 語系 -->
+        </ons-list-item>
+        
         <ons-list-item modifier="chevron" ng-click="ctl_setting.reset_app()" ng-show="CONFIG.enable_reset">
             <ons-icon icon="ion-refresh" size="20px"></ons-icon>
             重置 <!-- @TODO 語系 -->
