--- a/www/target_edit.html
+++ b/www/target_edit.html
@@ -30,7 +30,7 @@
                                   ng-click="ctl_target.change_target_number($event, 1)"></ons-icon>
                     </ons-col>
                     <ons-col width="50" style="text-align: right"  ng-show="(ctl_target.get_max_target(setting.key) === 0)">
-                        已經全部完成
+                        已經全部完成 <!-- @TODO 語系 -->
                     </ons-col>
                 </ons-row>
                 <ons-row class="recommend" ng-show="(ctl_target.get_max_target(setting.key) > 0)">
