--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -52,7 +52,7 @@
 
         <!--加入字典-0128-wyfan-->
         <ons-row style="display: flex;" class="side dictionary">
-            <ons-col width=25% ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'yahoo')">
+            <ons-col ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'yahoo')">
                 <ons-button>
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="yahhoo-dictionary" ></ons-icon>
                     <div>
@@ -60,7 +60,7 @@
                     </div>
                 </ons-button>
             </ons-col>
-            <ons-col width=25% ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'synonym')">
+            <ons-col ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'synonym')">
                 <ons-button>
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="synonym-dictionary" "></ons-icon>
                     <div>
@@ -68,7 +68,7 @@
                     </div>
                 </ons-button>
             </ons-col>
-            <ons-col width=25% ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'radicals')">
+            <ons-col ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'radicals')">
                 <ons-button>
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="radicals-dictionary" ></ons-icon>
                     <div>
@@ -76,7 +76,7 @@
                     </div>
                 </ons-button>	
             </ons-col>
-            <ons-col width=25% ng-click="ctl_activity.search_image(ctl_learn_flashcard.var.learn_flashcard.q)">
+            <ons-col ng-click="ctl_activity.search_image(ctl_learn_flashcard.var.learn_flashcard.q)">
                 <ons-button>
                     <ons-icon icon="ion-image" fixed-width="true" class="image-search" ></ons-icon>
                     <div>
