--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -53,7 +53,7 @@
         <!--加入字典-0128-wyfan-->
         <ons-row style="display: flex;" class="side dictionary">
             <ons-col width="25%" ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'yahoo')">
-                <ons-button style="width:95%">
+                <ons-button style="width:95%; white-space: initial;">
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="yahhoo-dictionary" ></ons-icon>
                     <div style="width:95%">
                         中英字典 <!-- @TODO 語系 -->
@@ -61,7 +61,7 @@
                 </ons-button>
             </ons-col>
             <ons-col  width="25%" ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'synonym')">
-                <ons-button style="width:95%">
+                <ons-button style="width:95%; white-space: initial;">
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="synonym-dictionary" "></ons-icon>
                     <div style="width:95%">
                         同義字典 <!-- @TODO 語系 -->
@@ -69,7 +69,7 @@
                 </ons-button>
             </ons-col>
             <ons-col width="25%" ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'radicals')">
-                <ons-button style="width:95%">
+                <ons-button style="width:95%; white-space: initial; ">
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="radicals-dictionary" ></ons-icon>
                     <div style="width:95%">
                         字根字典 <!-- @TODO 語系 -->
@@ -77,10 +77,12 @@
                 </ons-button>	
             </ons-col>
             <ons-col  width="25%" ng-click="ctl_activity.search_image(ctl_learn_flashcard.var.learn_flashcard.q)">
-                <ons-button style="width:95%;">
+                <ons-button style="width:95%; white-space: initial;">
                     <ons-icon icon="ion-image" fixed-width="true" class="image-search" ></ons-icon>
                     <div style="width:95%;">
-                        圖片搜尋 <!-- @TODO 語系 -->
+                       
+						圖片搜尋 <!-- @TODO 語系 -->
+						
                     </div>
                 </ons-button>	
             </ons-col>			
