--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -52,35 +52,37 @@
 
         <!--加入字典-0128-wyfan-->
         <ons-row style="display: flex;" class="side dictionary">
-            <ons-col width=25% ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'yahoo')">
-                <ons-button>
+            <ons-col width="25%" ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'yahoo')">
+                <ons-button style="width:95%; white-space: initial;">
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="yahhoo-dictionary" ></ons-icon>
-                    <div>
+                    <div style="width:95%">
                         中英字典 <!-- @TODO 語系 -->
                     </div>
                 </ons-button>
             </ons-col>
-            <ons-col width=25% ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'synonym')">
-                <ons-button>
+            <ons-col  width="25%" ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'synonym')">
+                <ons-button style="width:95%; white-space: initial;">
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="synonym-dictionary" "></ons-icon>
-                    <div>
-                        同義字字典 <!-- @TODO 語系 -->
+                    <div style="width:95%">
+                        同義字典 <!-- @TODO 語系 -->
                     </div>
                 </ons-button>
             </ons-col>
-            <ons-col width=25% ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'radicals')">
-                <ons-button>
+            <ons-col width="25%" ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'radicals')">
+                <ons-button style="width:95%; white-space: initial; ">
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="radicals-dictionary" ></ons-icon>
-                    <div>
+                    <div style="width:95%">
                         字根字典 <!-- @TODO 語系 -->
                     </div>
                 </ons-button>	
             </ons-col>
-            <ons-col width=25% ng-click="ctl_activity.search_image(ctl_learn_flashcard.var.learn_flashcard.q)">
-                <ons-button>
+            <ons-col  width="25%" ng-click="ctl_activity.search_image(ctl_learn_flashcard.var.learn_flashcard.q)">
+                <ons-button style="width:95%; white-space: initial;">
                     <ons-icon icon="ion-image" fixed-width="true" class="image-search" ></ons-icon>
-                    <div>
-                        圖片搜尋 <!-- @TODO 語系 -->
+                    <div style="width:95%;">
+                       
+						圖片搜尋 <!-- @TODO 語系 -->
+						
                     </div>
                 </ons-button>	
             </ons-col>			
@@ -94,10 +96,9 @@
         <ons-icon icon="ion-edit" fixed-width="true" class="compose"></ons-icon>
 
         <span class="your-note pre" 
-              ng-show="(ctl_learn_flashcard.var.learn_flashcard.note !== null)">{{ ctl_learn_flashcard.var.learn_flashcard.note}}</span>
-
+              ng-show="(ctl_learn_flashcard.var.learn_flashcard.note !== null && ctl_learn_flashcard.var.learn_flashcard.note !== undefined)">{{ ctl_learn_flashcard.var.learn_flashcard.note}}</span>
         <span class="note-empty" 
-              ng-show="(ctl_learn_flashcard.var.learn_flashcard.note === null)">
+              ng-show="(ctl_learn_flashcard.var.learn_flashcard.note === null || ctl_learn_flashcard.var.learn_flashcard.note === undefined)">
             {{ 'LEARN_FLASHCARD_NOTE_EMPTY' | translate }}
         </span>
     </div>
