--- a/www/target_edit.html
+++ b/www/target_edit.html
@@ -19,18 +19,18 @@
                     </ons-col>
 
                     <ons-col width="50" style="text-align: right" ng-show="(ctl_target.get_max_target(setting.key) > 0)">
-                        <ons-icon icon="ion-ios-minus-outline" fixed-width="true" 
+                        <ons-icon icon="ion-ios-minus-outline" fixed-width="true" style="cursor:pointer" 
                                   ng-click="ctl_target.change_target_number($event, -1)"></ons-icon>
                         <input min="{{ setting.min}}" max="{{ ctl_target.get_max_target(setting.key)}}" type="number" 
                                value="{{ data.target}}"
                                target_key="{{ setting.key}}"
                                name="target_{{ setting.key}}"
                                class="target-input" />
-                        <ons-icon icon="ion-ios-plus-outline" fixed-width="true" 
+                        <ons-icon icon="ion-ios-plus-outline" fixed-width="true"  style="cursor:pointer"
                                   ng-click="ctl_target.change_target_number($event, 1)"></ons-icon>
                     </ons-col>
                     <ons-col width="50" style="text-align: right"  ng-show="(ctl_target.get_max_target(setting.key) === 0)">
-                        已經全部完成
+                        已經全部完成 <!-- @TODO 語系 -->
                     </ons-col>
                 </ons-row>
                 <ons-row class="recommend" ng-show="(ctl_target.get_max_target(setting.key) > 0)">
