--- a/www/learn_flashcard_transition.html
+++ b/www/learn_flashcard_transition.html
@@ -40,8 +40,8 @@
             <ons-icon icon="ion-radio-waves" fixed-width="true" class="speak" ng-show="CONFIG.enable_speak === true"></ons-icon>
         </ons-row>
         
-        <ons-row style="display: flex;" class="side dictionary">
-            <ons-col width=25% ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'yahoo')">
+        <ons-row class="side dictionary">
+            <ons-col width=20% ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'yahoo')">
                 <ons-button>
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="yahhoo-dictionary" ></ons-icon>
                     <div>
@@ -49,7 +49,7 @@
                     </div>
                 </ons-button>
             </ons-col>
-            <ons-col width=25% ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'synonym')">
+            <ons-col width=20% ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'synonym')">
                 <ons-button>
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="synonym-dictionary" "></ons-icon>
                     <div>
@@ -57,7 +57,7 @@
                     </div>
                 </ons-button>
             </ons-col>
-            <ons-col width=25% ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'radicals')">
+            <ons-col width=20% ng-click="ctl_activity.query_dictionary(ctl_learn_flashcard.var.learn_flashcard.q, 'radicals')">
                 <ons-button>
                     <ons-icon icon="ion-ios-book" fixed-width="true" class="radicals-dictionary" ></ons-icon>
                     <div>
@@ -65,7 +65,7 @@
                     </div>
                 </ons-button>	
             </ons-col>
-            <ons-col width=25% ng-click="ctl_activity.search_image(ctl_learn_flashcard.var.learn_flashcard.q)">
+            <ons-col width=20% ng-click="ctl_activity.search_image(ctl_learn_flashcard.var.learn_flashcard.q)">
                 <ons-button>
                     <ons-icon icon="ion-image" fixed-width="true" class="image-search" ></ons-icon>
                     <div>
