--- a/www/target_view_page.html
+++ b/www/target_view_page.html
@@ -30,7 +30,7 @@
                 </ons-col>
 
                 <ons-col width="50" style="text-align: right">
-                    {{ data.done}} / {{ data.target}}
+                    {{ data.done}} / {{ data.target}}AA
                 </ons-col>
             </ons-row>
         </ons-list-item>
