--- a/www/target_recommend.html
+++ b/www/target_recommend.html
@@ -1,7 +1,7 @@
 <ons-page id="target_recommend_html" class="target-page" 
           ng-device-backbutton="$($event.target).find('.button-ok').click()">
     <form ng-submit="ctl_target.set_target($event);
-            ctl_activity.enter_from_target();">
+            ctl_activity.enter_from_target();" novalidate>
         <ons-toolbar>
             <div class="center">{{ ctl_target.get_set_title()}}</div>
         </ons-toolbar>
@@ -23,14 +23,16 @@
                         <ons-icon icon="ion-ios-minus-outline" fixed-width="true"
                                   ng-click="ctl_target.change_target_number($event, -1)"></ons-icon>
                         <input min="{{ setting.min}}" max="{{ ctl_target.get_max_target(setting.key)}}" type="number" 
-                               value="{{ recommend.recommend_target}}"
+                               ng-value="{{ recommend.recommend_target }}"
                                target_key="{{ setting.key}}"
                                class="target-input" />
                         <ons-icon icon="ion-ios-plus-outline" fixed-width="true" 
                                   ng-click="ctl_target.change_target_number($event, 1)"></ons-icon>
                     </ons-col>
                     <ons-col width="50" style="text-align: right"  ng-show="(ctl_target.get_max_target(setting.key) === 0)">
-                        已經全部完成
+                        已經全部完成 
+                        <ons-icon icon="ion-checkmark-circled" fixed-width="true"></ons-icon>
+                        <!-- @TODO 語系 -->
                     </ons-col>
                 </ons-row>
                 <ons-row class="recommend" ng-show="(ctl_target.get_max_target(setting.key) > 0)">
