--- a/www/target_view_page.html
+++ b/www/target_view_page.html
@@ -11,7 +11,8 @@
         
         <div class="center">{{ ctl_target.get_view_title()}}</div>
 
-        <div class="right" ng-click="app.navi.pushPage('target_edit.html')">
+        <div class="right" ng-click="app.navi.pushPage('target_edit.html')" 
+             ng-show="ctl_target.is_all_finish() === false">
             <ons-toolbar-button>
                 <ons-icon icon="ion-edit" fixed-width="true"></ons-icon>
             </ons-toolbar-button>
@@ -30,7 +31,9 @@
                 </ons-col>
 
                 <ons-col width="50" style="text-align: right">
-                    {{ data.done}} / {{ data.target}}AA
+                    {{ ctl_target.display_target(setting.key, data.done, data.target) }}
+                    <ons-icon icon="ion-checkmark-circled" fixed-width="true"
+                              ng-show="ctl_target.is_all_finish(setting.key)"></ons-icon>
                 </ons-col>
             </ons-row>
         </ons-list-item>
