--- a/www/learn_flashcard.html
+++ b/www/learn_flashcard.html
@@ -17,10 +17,13 @@
 
         <div class="right" >
             <span ng-init="_target_data = ctl_target.status.learn_flashcard" 
-                  ng-class="{'target-incompleted': (_target_data.done < _target_data.target)}"
+                  ng-class="{'target-incompleted': (_target_data.done < _target_data.target), 'target-completed': (ctl_target.is_all_finish('learn_flashcard'))}"
                   ng-click="ctl_target.enter_for_view()"
-                  ng-show="_target_data.target !== 0 && !CONFIG.control_group_version">
-                {{ _target_data.done}} / {{ _target_data.target}}
+                  ng-show="!CONFIG.control_group_version">
+                <!-- {{ _target_data.done}} / {{ _target_data.target}} -->
+                {{ ctl_target.menu_display_target("learn_flashcard", _target_data.done, _target_data.target) }}
+                <ons-icon icon="ion-checkmark-circled" fixed-width="true"
+                           ng-show="ctl_target.is_all_finish('learn_flashcard')"></ons-icon>
             </span>
 
             <ons-icon icon='ion-android-more-vertical' fixed-width="true" class="more-button" 
@@ -94,7 +97,9 @@
         <ons-icon icon="ion-edit" fixed-width="true" class="compose"></ons-icon>
 
         <span class="your-note pre" 
-              ng-show="(ctl_learn_flashcard.var.learn_flashcard.note !== null && ctl_learn_flashcard.var.learn_flashcard.note !== undefined)">{{ ctl_learn_flashcard.var.learn_flashcard.note}}</span>
+              ng-show="(ctl_learn_flashcard.var.learn_flashcard.note !== null && ctl_learn_flashcard.var.learn_flashcard.note !== undefined)">
+            {{ ctl_learn_flashcard.var.learn_flashcard.note}}
+        </span>
         <span class="note-empty" 
               ng-show="(ctl_learn_flashcard.var.learn_flashcard.note === null || ctl_learn_flashcard.var.learn_flashcard.note === undefined)">
             {{ 'LEARN_FLASHCARD_NOTE_EMPTY' | translate }}
