--- a/www/note_list_view.html
+++ b/www/note_list_view.html
@@ -10,13 +10,18 @@
             </ons-toolbar-button>
         </div>
 
-        <div class="center">{{ ctl_note_list.var.q }} 筆記</div>
+        <div class="center">
+            {{ ctl_note_list.var.q }} 筆記
+            <!-- @TODO 語系 -->
+        </div>
 
         <div class="right"
-             ng-class="{'target-incompleted': (ctl_target.status.take_note.done < ctl_target.status.take_note.target)}"             
+             ng-class="{'target-incompleted': (ctl_target.status.take_note.done < ctl_target.status.take_note.target), 'target-completed': (ctl_target.is_all_finish('take_note'))}"
              ng-click="ctl_target.enter_for_view()"
-             ng-show="ctl_target.status.take_note.target !== 0 && !CONFIG.control_group_version">
-            {{ ctl_target.status.take_note.done}} / {{ ctl_target.status.take_note.target}}
+             ng-show="!CONFIG.control_group_version">
+            {{ ctl_target.menu_display_target("take_note", ctl_target.status.take_note.done, ctl_target.status.take_note.target) }}
+            <ons-icon icon="ion-checkmark-circled" fixed-width="true"
+                           ng-show="ctl_target.is_all_finish('take_note')"></ons-icon>
         </div>
     </ons-toolbar>
 
@@ -29,7 +34,8 @@
 
     <div style="max-height: calc(100% - 140px); overflow-y: auto;">
         <ons-row>
-            <textarea class="note textarea textarea--transparent" placeholder="撰寫筆記..." 
+            <!-- @TODO 語系 -->
+            <textarea class="note textarea textarea--transparent" placeholder="壓一下撰寫筆記..." 
                       ng-keyup="ctl_note.auto_grow($event)"
                       style=" margin:1rem;   padding: 1rem;  border-radius: 4px;border: 1px solid #ddd; 
                       background-color: #f9f9f9; overflow-y: auto;width: 100%;">{{ ctl_note_list.var.note}}</textarea>
