--- a/www/target_init.html
+++ b/www/target_init.html
@@ -1,8 +1,7 @@
 <ons-page id="target_init_html" class="target-page" 
           ng-device-backbutton="$($event.target).find('.button-ok').click()">
     <form ng-submit="ctl_target.set_target($event);
-            ctl_activity.enter_from_target();
-			"> <!--ctl_target.set_target_survey($event);-->
+        ctl_activity.enter_from_target();" novalidate> <!--ctl_target.set_target_survey($event);-->
         <ons-toolbar>
             <div class="center">{{ctl_target.get_set_title()}}</div>
         </ons-toolbar>
@@ -23,7 +22,7 @@
                         <ons-icon icon="ion-ios-minus-outline" fixed-width="true" 
                                   ng-click="ctl_target.change_target_number($event, -1)"></ons-icon>
                         <input min="{{setting.min}}" max="{{ ctl_target.get_max_target(setting.key)}}" type="number" 
-                               value="{{ data.target}}"
+                               ng-value="{{ data.target}}"
                                target_key="{{setting.key}}"
                                class="target-input" />
                         <ons-icon icon="ion-ios-plus-outline" fixed-width="true" 
